--- a/services/tasks_api/pyproject.toml
+++ b/services/tasks_api/pyproject.toml
@@ -8,6 +8,9 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "fastapi (>=0.117.1,<0.118.0)",
+    "uvicorn (>=0.36.0,<0.37.0)",
+    "httpx (>=0.28.1,<0.29.0)"
 ]
 
 
