--- a/services/tasks_api/pyproject.toml
+++ b/services/tasks_api/pyproject.toml
@@ -11,6 +11,7 @@ python = ">=3.10"
 fastapi = ">=0.117.1,<0.118.0"
 uvicorn = ">=0.36.0,<0.37.0"
 httpx = ">=0.28.1,<0.29.0"
+mangum = "^0.19.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=8.4.2,<9.0.0"
