fixed black issues

--- a/services/tasks_api/serverless.yml
+++ b/services/tasks_api/serverless.yml
@@ -34,6 +34,8 @@ functions:
 custom:
   pythonRequirements:
     usePoetry: true
+    dockerizePip: true # Ensures packaging matches Lambda environment
+    pythonBin: /opt/hostedtoolcache/Python/3.11.13/x64/bin/python3
     noDeploy:
     - boto3 # already on Lambda
     - botocore # already on Lambda
