--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -97,7 +97,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install Serverless Framework
-        run: npm install -g serverless
+        run: npm install -g serverless@3
       - name: Install NPM dependencies
         run: npm install
       - name: Deploy
