fixed Cannot resolve variable at functions.API.events.0.http.cors.origin

--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -9,6 +9,7 @@ env:
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   AWS_DEFAULT_REGION: eu-west-1
   APP_ENVIRONMENT: development
+  ALLOWED_ORIGINS: ${{ secrets.ALLOWED_ORIGINS }}
 
 jobs:
   test:
