--- a/services/tasks_api/serverless.yml
+++ b/services/tasks_api/serverless.yml
@@ -17,6 +17,22 @@ provider:
   logRetentionInDays: 90
   environment:
     APP_ENVIRONMENT: ${self:provider.stage}
+  iam:
+    role:
+      statements:
+      - Effect: Allow
+        Action:
+        - dynamodb:DescribeTable
+        - dynamodb:Query
+        - dynamodb:Scan
+        - dynamodb:GetItem
+        - dynamodb:PutItem
+        - dynamodb:UpdateItem
+        - dynamodb:DeleteItem
+        # Allow only access to the API's table and its indexes
+        Resource:
+        - "Fn::GetAtt": [ TasksAPITable, Arn ]
+        - "Fn::Join": [ '/', [ { "Fn::GetAtt": [ TasksAPITable, Arn ] }, 'index', '*' ] ]
 
 functions:
   API:
@@ -37,6 +53,11 @@ custom:
     noDeploy:
     - boto3 # already on Lambda
     - botocore # already on Lambda
+  stage: ${opt:stage, self:provider.stage}
+  tableName: ${self:custom.stage}-tasks-api
 
 plugins:
 - serverless-python-requirements
+
+resources:
+- ${file(resources/dynamodb.yml)}
