--- a/services/tasks_api/serverless.yml
+++ b/services/tasks_api/serverless.yml
@@ -46,6 +46,10 @@ functions:
         cors:
           origin: ${env:ALLOWED_ORIGINS}
           maxAge: 60
+        authorizer:
+          name: TasksAPIAuthorizer
+          type: COGNITO_USER_POOLS
+          arn: Fn::GetAtt - CognitoUserPool - Arn
 
 custom:
   pythonRequirements:
