correcrted the arn for cognito user pool authentication

--- a/services/tasks_api/serverless.yml
+++ b/services/tasks_api/serverless.yml
@@ -49,7 +49,10 @@ functions:
         authorizer:
           name: TasksAPIAuthorizer
           type: COGNITO_USER_POOLS
-          arn: Fn::GetAtt - CognitoUserPool - Arn
+          arn:
+            Fn::GetAtt
+            - CognitoUserPool
+            - Arn
 
 custom:
   pythonRequirements:
