--- a/services/tasks_api/serverless.yml
+++ b/services/tasks_api/serverless.yml
@@ -48,10 +48,7 @@ functions:
           maxAge: 60
         authorizer:
           type: COGNITO_USER_POOLS
-          providerARNs:
-            - Fn::GetAtt:
-                - CognitoUserPool
-                - Arn
+          arn: Fn::GetAtt - CognitoUserPool - Arn
 
 custom:
   pythonRequirements:
