--- a/services/tasks_api/serverless.yml
+++ b/services/tasks_api/serverless.yml
@@ -17,6 +17,7 @@ provider:
   logRetentionInDays: 90
   environment:
     APP_ENVIRONMENT: ${self:provider.stage}
+    TABLE_NAME: ${self:custom.tableName}
   iam:
     role:
       statements:
@@ -40,19 +41,19 @@ functions:
     timeout: 10
     memorySize: 512
     events:
-      - http:
-          path: /{proxy+}
-          method: any
-          cors:
-            origin: ${env:ALLOWED_ORIGINS}
-            maxAge: 60
-          authorizer:
-            name: TasksAPIAuthorizer
-            type: COGNITO_USER_POOLS
-            arn:
-              Fn::GetAtt:
-                - CognitoUserPool
-                - Arn
+    - http:
+        path: /{proxy+}
+        method: any
+        cors:
+          origin: ${env:ALLOWED_ORIGINS}
+          maxAge: 60
+        authorizer:
+          name: TasksAPIAuthorizer
+          type: COGNITO_USER_POOLS
+          arn:
+            Fn::GetAtt:
+            - CognitoUserPool
+            - Arn
 
 custom:
   pythonRequirements:
