--- a/services/tasks_ui/package.json
+++ b/services/tasks_ui/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/auth": "^5.0.5",
+    "@aws-amplify/ui-vue": "^3.0.4",
+    "aws-amplify": "^5.3.27",
     "serverless-s3-sync": "^3.4.0",
     "vue": "^3.2.47"
   },
