Configured the App to use cognito for auth

--- a/.github/workflows/ui.yml
+++ b/.github/workflows/ui.yml
@@ -10,6 +10,7 @@ env:
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   AWS_DEFAULT_REGION: eu-west-1
   APP_ENVIRONMENT: development
+  VITE_VUE_APP_API_URL: https://smps5tckfk.execute-api.eu-west-1.amazonaws.com/development/api 
 
 
 jobs:
