--- a/services/tasks_ui/package.json
+++ b/services/tasks_ui/package.json
@@ -12,6 +12,10 @@
     "@aws-amplify/auth": "^5.0.5",
     "@aws-amplify/ui-vue": "^3.0.4",
     "aws-amplify": "^5.3.27",
+    "axios": "^1.2.1",
+    "element-plus": "^2.2.26",
+    "sass": "^1.56.2",
+    "sass-loader": "^13.2.0",
     "serverless-s3-sync": "^3.4.0",
     "vue": "^3.2.47"
   },
