fixed destroy cloud resources for api

--- a/services/tasks_api/serverless.yml
+++ b/services/tasks_api/serverless.yml
@@ -45,7 +45,7 @@ functions:
         path: /{proxy+}
         method: any
         cors:
-          origin: ${env:ALLOWED_ORIGINS}
+          origin: ${env:ALLOWED_ORIGINS, "*"}
           maxAge: 60
         authorizer:
           name: TasksAPIAuthorizer
